--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+/*black: #000807ff;
+pink: #ee85d8ff;
+yellow: #fedd0aff;
+white: #ffffffff;*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+    text-align: center;
+    padding: 15px;
+
+    width: 100%;
+    height: 60px;
+    background: #fedd0aff;
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
 body {
-  background: pink;
+  background: #ffffffff;
 }
