--- a/LeWagon/style.css
+++ b/LeWagon/style.css
@@ -4,7 +4,7 @@ font-family: 'Overpass', sans-serif;*/
 body {
   font-family: "Overpass", sans-serif;
   font-size: 18px;
-  margin: 0px;
+  margin: 0;
 }
 
 h1, h2, h3 {
@@ -20,4 +20,36 @@ a {
 
 a:hover {
   color: #CE2FAE;
+}
+
+p {
+  color: #404042;
+  opacity: .7;
+}
+
+.container {
+  margin: auto;
+  width: 800px;
+
+}
+
+.banner {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), linear-gradient(rgba(0, 0, 0, 0.6)), url("images/background.jpg");
+  background-position: center;
+  background-size: cover;
+  padding: 150px 0;
+  text-align:center;
+}
+
+.button-blue {
+
+}
+
+.card-white {
+
+
+}
+
+.footer {
+
 }
