--- a/LeWagon/style.css
+++ b/LeWagon/style.css
@@ -1,13 +1,19 @@
 /*font-family: 'Chivo', sans-serif;
 font-family: 'Overpass', sans-serif;*/
 
-body {
-  font-family: "Overpass", sans-serif;
-  font-size: 18px;
+* {
+  box-sizing: border-box;
   margin: 0;
 }
 
-h1, h2, h3 {
+body {
+  font-family: "Overpass", sans-serif;
+  background-color: rgb(230, 230, 230);
+  font-size: 62.5%;
+  margin: 0;
+}
+
+h2, h3 {
   font-family: "Chivo", sans-serif;
 }
 
@@ -40,15 +46,53 @@ p {
   text-align:center;
 }
 
+h1 {
+  color: white;
+  font-size: 3rem;
+}
+.banner p {
+  color: white;
+  font-size: 1.4rem;
+}
 .button-blue {
-
+ background-color: #1A48E3;
+ border-radius: 5px;
+ color: white;
+ display: inline-block;
+ padding: 16px 48px;
+ text-decoration: none;
+ transition: .3s;
+}
+.button-blue:hover {
+  background-color: #0D1EC6;
+  color: white;
+}
+.card-white {
+background: white;
+box-shadow: 0 0 16px rgba(0, 0, 0, 0.1);
+border-radius: 5px;
+width: 200px;
+text-align: center;
+padding: 4px;
+margin: 8px;
 }
 
-.card-white {
+.card-white img {
+  width: 180px;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 5px;
+}
 
-
+.card-white h3 {
+  margin-bottom: 0;
 }
 
 .footer {
-
+background: #404042;
+text-align: center;
+padding: 24px 0;
+}
+.footer p {
+  color: white;
 }
